<resources>
    <string name="app_name">calendar</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="thu">화</string>
    <string name="wed">수</string>
    <string name="thur">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="success_percent">성공비율</string>
    <string name="random_list">랜덤리스트 관리</string>
    <string name="change_promise">다짐 수정하기</string>
    <string name="calendar_right">calendar_right</string>
    <string name="calendar_left">calendar_left</string>
    <string name="year_month">%d %d월</string>
    <string name="promise">PROMISE</string>
    <string name="todo">TODO</string>
    <string name="nav_set_goal">성공 확률 지정</string>
    <string name="percent">%</string>
    <string name="_80">80</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="change_theme">테마 이미지 설정</string>
    <string name="image_upload">이미지 불러오기</string>
    <string name="theme_image">theme_image</string>
    <string name="my_promise">나의 다짐</string>
    <string name="random_list_head">RANDOM LIST</string>
    <string name="add_list">Add List</string>
    <string name="category">CATEGORY</string>
    <string name="item">항목</string>
    <string name="aboutLink">관련링크</string>
    <string name="tag">태그</string>
    <string name="link_upper">LINK</string>
    <string name="item_upper">ITEM</string>
    <string name="category_upper">CATEGORY</string>
    <string name="number_no">No.</string>
</resources>