<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bar_set_goal"
        android:title="@string/success_percent"
        android:orderInCategory="0"
        android:icon="@mipmap/nav_goal"/>
    <item
        android:id="@+id/bar_random_list"
        android:title="@string/random_list"
        android:orderInCategory="1"
        android:icon="@mipmap/nav_list"/>
    <item
        android:id="@+id/bar_change_promise"
        android:title="@string/change_promise"
        android:orderInCategory="2"
        android:icon="@mipmap/nav_promise"/>
    <item
        android:id="@+id/bar_change_theme"
        android:title="@string/change_theme"
        android:orderInCategory="3"
        android:icon="@drawable/image"/>
</menu>