<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/calendar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginHorizontal="31dp"
        style="@style/calendarMonthHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageButton
            android:id="@+id/calendar_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar_left"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/calendar_left">
        </ImageButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_month"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp">
        </TextView>
        <ImageButton
            android:id="@+id/calendar_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar_right"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/calendar_right">
        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/calendar_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/calendar_sun"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            style="@style/calendarWeekSUN">
        </TextView>
        <TextView
            android:id="@+id/calendar_mon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            style="@style/calendarWeekHeader">
        </TextView>
        <TextView
            android:id="@+id/calendar_thu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            style="@style/calendarWeekHeader">
        </TextView>
        <TextView
            android:id="@+id/calendar_wed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            style="@style/calendarWeekHeader">
        </TextView>
        <TextView
            android:id="@+id/calendar_thur"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/thur"
            style="@style/calendarWeekHeader">
        </TextView>
        <TextView
            android:id="@+id/calendar_fri"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            style="@style/calendarWeekHeader">
        </TextView>
        <TextView
            android:id="@+id/calendar_sat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            style="@style/calendarWeekSAT">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>