<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    style="@style/TableTheme">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_upper"
            android:textSize="17sp"
            android:textStyle="bold"
            android:paddingEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_upper"
            android:textSize="17sp"
            android:textStyle="bold"
            android:paddingEnd="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_upper"
            android:textSize="17sp"
            android:textStyle="bold"
            android:paddingEnd="40dp"/>
    </TableRow>
</TableLayout>