<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_theme_guide"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_end="0dp"
        app:layout_constraintGuide_percent="0.5"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/nav_theme_view"
        android:contentDescription="@string/theme_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/nav_theme_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        android:padding="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/nav_theme_buttons"
        app:layout_constraintTop_toBottomOf="@+id/nav_theme_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_upload"
            android:id="@+id/nav_theme_upload"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/nav_theme_ok"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/nav_theme_cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>